--- a/pair-prototype/index.html
+++ b/pair-prototype/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webgl.loader.js";
+      var loaderUrl = buildUrl + "/webgl2.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/webgl.data.br",
-        frameworkUrl: buildUrl + "/webgl.framework.js.br",
-        codeUrl: buildUrl + "/webgl.wasm.br",
+        dataUrl: buildUrl + "/webgl2.data.gz",
+        frameworkUrl: buildUrl + "/webgl2.framework.js.gz",
+        codeUrl: buildUrl + "/webgl2.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "rival rush",
