--- a/pair-prototype/index.html
+++ b/pair-prototype/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webgl2.loader.js";
+      var loaderUrl = buildUrl + "/webgl3.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/webgl2.data.gz",
-        frameworkUrl: buildUrl + "/webgl2.framework.js.gz",
-        codeUrl: buildUrl + "/webgl2.wasm.gz",
+        dataUrl: buildUrl + "/webgl3.data",
+        frameworkUrl: buildUrl + "/webgl3.framework.js",
+        codeUrl: buildUrl + "/webgl3.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "rival rush",
